# ETL-practice-with-claude

./: .gitignore  CLAUDE.md  DEVELOPMENT.md  LICENSE  README.md  generate.py  main.py  pyproject.toml  run_all.py
.claude/commands/: run-all.md  run-etl.md
.github/workflows/: ci.yml
examples/: posts_sample.jsonl  report_sample.html
pipeline/: config.py  extract.py  generate.py  load.py  transform.py
templates/: report.html
tests/: test_extract.py  test_load.py  test_transform.py
